--- a/buildspec.yml
+++ b/buildspec.yml
@@ -6,8 +6,7 @@ phases:
       java: corretto11
   build:
     commands:
-      - ./mvnw package
-      - java -jar target/*.jar
+      - ./mvnw spring-boot:run
   post_build:
     commands:
       - echo Build completed
