--- a/appspec.yml
+++ b/appspec.yml
@@ -4,6 +4,7 @@ os: linux
 files:
   - source: /
     destination: /home/ec2-user/server
+file_exists_behavior: OVERWRITE
 
 permissions:
   - object: /
