--- a/appspec.yml
+++ b/appspec.yml
@@ -14,7 +14,7 @@ permissions:
 
 hooks:
   AfterInstall:
-    - location: fix_privileges.sh
+    - location: fix_previleges.sh
       timeout: 300
       runas: ec2-user
   ApplicationStart:
