--- a/appspec.yml
+++ b/appspec.yml
@@ -18,11 +18,11 @@ hooks:
       timeout: 300
       runas: ec2-user
   ApplicationStart:
-    - location: server_start.sh
+    - location: start_server.sh
       timeout: 20
       runas: ec2-user
   ApplicationStop:
-    - location: server_stop.sh
+    - location: stop_server.sh
       timeout: 20
       runas: ec2-user
       
